tdf#116451: XML Form: adding 2 values of decimal-fields gives wrong result

Since, depending of the localization decimal separator may be ",",
replace "," by "." before calling ::rtl::math::stringToDouble

Change-Id: I461f3bdf83019d066735e10b3b6b6784e006bc7f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/150750
Tested-by: Jenkins
(cherry picked from commit 50837fdd60d3d20b5025d94e243b09d92a166fb4)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/150728
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>